Fix sidebar mobile location/spacing on main panel content

--- a/src/app/dashboard/panel/panel.component.css
+++ b/src/app/dashboard/panel/panel.component.css
@@ -24,5 +24,6 @@
     border-top-left-radius: unset;
     box-shadow: unset;
     border-bottom-left-radius: unset;
+    height: 100vh;
   }
 }
